Fix Main test.