@@ -14,5 +14,3 @@ libraryDependencies ++= Seq(
 )
 
 parallelExecution in Test := false
-
-javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
